@@ -106,6 +106,11 @@
 	Limit maximum height of message popup, just print how many lines we're
 	skipping.
 
+	No vifminfo merging if file change isn't detected.  Might result in faster
+	quitting in some cases.  Not accounting for some changes is still possible
+	when multiple instances quit simultaneously, but same could happen without
+	this change.
+
 	Fixed redirecting stdout of background commands to /dev/null, which could
 	be unwritable descriptor.  Thanks to c02y.
 
